--- a/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
+++ b/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>KeyPostCreatePaymentRecords.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>newkeyasdasd.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xrm.Sdk">
@@ -60,11 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="PostCreatePaymentRecords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="KeyPostCreatePaymentRecords.snk" />
+    <None Include="newkeyasdasd.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
