--- a/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
+++ b/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PostAssignMortgage.cs" />
     <Compile Include="PostCreatePaymentRecords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
