--- a/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
+++ b/PostCreatePaymentRecords/PostCreatePaymentRecords.csproj
@@ -60,8 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PostAssignCase.cs" />
     <Compile Include="PostAssignMortgage.cs" />
     <Compile Include="PostCreatePaymentRecords.cs" />
+    <Compile Include="PostUpdatePaymentRecords.cs" />
+    <Compile Include="PreAutofillCustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
